@@ -1,11 +1,11 @@
 /*
- *    Copyright 2006-2020 the original author or authors.
+ *    Copyright 2006-2023 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -32,7 +32,7 @@ import org.reflections.Reflections;
 
 public class GenerateTestSourceFiles {
 
-    public static void main (String[] args) {
+    public static void main(String[] args) {
         if (args.length < 1 || !StringUtility.stringHasValue(args[0])) {
             throw new RuntimeException("This class requres one argument which is the location of the output directory");
         }
@@ -48,20 +48,20 @@ public class GenerateTestSourceFiles {
         }
     }
 
-    private void gatherGenerators(List<CompilationUnitGenerator> generators) throws InstantiationException, IllegalAccessException {
+    private void gatherGenerators(List<CompilationUnitGenerator> generators) throws ReflectiveOperationException {
         Reflections reflections = new Reflections("mbg.domtest.generators");
         Set<Class<? extends CompilationUnitGenerator>> classes = reflections.getSubTypesOf(CompilationUnitGenerator.class);
 
         for (Class<? extends CompilationUnitGenerator> clazz : classes) {
             if (clazz.getAnnotation(IgnoreDomTest.class) == null) {
-                generators.add(clazz.newInstance());
+                generators.add(clazz.getDeclaredConstructor().newInstance());
             } else {
                 System.out.println("Generator " + clazz.getName() + " ignored");
             }
         }
     }
 
-    private void run(File outputDirectory) throws IOException, InstantiationException, IllegalAccessException {
+    private void run(File outputDirectory) throws IOException, ReflectiveOperationException {
         setupOutputDirectry(outputDirectory);
 
         List<CompilationUnitGenerator> generators = new ArrayList<>();
@@ -73,7 +73,7 @@ public class GenerateTestSourceFiles {
             cus.addAll(generator.generate());
         }
 
-        for (CompilationUnit cu: cus) {
+        for (CompilationUnit cu : cus) {
             writeCompilationUnit(outputDirectory, cu);
         }
     }
